infrastructure/controllers/base/keycloak-operator/ingress-k3d.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-test-k3d-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  ingressClassName: traefik
  rules:
  - host: keycloak-test.k3d.lessingstrasse.org
    http:
      paths:
      - backend:
          service:
            name: example-kc-service
            port:
              number: 8080
        pathType: ImplementationSpecific

  tls:
  - hosts:
    - keycloak-test.k3d.lessingstrasse.org
    secretName: keycloak-test.k3d.lessingstrasse.org
